--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <h3 class="title">FACEBOOK</h3>
                 <p>nama akun  = al-gazali </p>
                 <p>nama link  = /*********** </p>
-                <a href="">
+                <a href="https://www.facebook.com/muhammadalgazali019?ref=bookmarks">
                         <button class="GOTO">GO add</button>
                 </a>
             </div>
@@ -63,7 +63,7 @@
                 <h3 class="title">INSTAGRAM</h3>
                 <p>nama akun  = riani_gazali19 </p>
                 <p>nama link  = /*********** </p>
-                <a href="">
+                <a href="https://www.instagram.com/riani_gazali19/?hl=id">
                         <button class="GOTO">GO follow</button>
                 </a>
             </div>
@@ -71,15 +71,15 @@
                 <h3 class="title">YOUTUBE</h3>
                 <p>nama akun  = jargom aplikom </p>
                 <p>nama link  = /*********** </p>
-                <a href="">
+                <a href="https://www.youtube.com/channel/UCBEViWPWDf74W8diMvtosLw?view_as=subscriber">
                     <button class="GOTO">GO xubscribe</button>
                 </a>
             </div>
             <div class="service-box-4">
-                <h3 class="title">THIS WEB SITE</h3>
+                <h3 class="title">WEB SITE</h3>
                 <p>nama akun  = all website </p>
                 <p>nama link  = /*********** </p>
-                <a href=""> 
+                <a href="algazali-k4pal-laporann.netlify.com"> 
                     <button class="GOTO">lets start</button>
                 </a>
             </div>
